[project]
name = "get-papers-list-sakshi"
version = "0.1.0"
description = ""
authors = [
    {name = "sakshi",email = "sakshii.v0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "get_papers_list"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/legacy/"