[tool.poetry]
name = "get-papers-list-pubmed"
version = "0.1.0"
description = ""
authors = ["sakshi <sakshii.v0@gmail.com>"]
readme = "README.md"
packages = [{ include = "get_papers_list" }]

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
python-dotenv="^1.0.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

